Пройдено и использовано 10 уроков html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
 <head>
 	<title>Hello world!</title>
+	<meta charset="utf-8">
+	<meta name="description" content="Описание сайта">
+	<meta name="keywords" content="Ключевые слова">
+	<style type="text/css"></style>
+	<script type="text/javascript"></script>
 </head>
 <body>
 	<h1 align="center">Work Bitch!</h1>
-	<p>Second Change</p>
+	<p align="center" style="color: #00ff00"><em>Se<b>co</b>nd</em> <ins>Change</ins></p>
+	<p style="text-align: justify;">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.<br> Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.<br> Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. <br>Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот.<br> Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни.<br> Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики.<br> Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку.<br> Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу.</p>
+	<a href="contact.html" target="_blank"> Контакты</a>
+	
+	<picture>
+		<source media="(min-width:1024px)"
+		srcset="2.jpg"; style="width: 99%; display: block; margin: 0 auto">
+		<source media="(min-width:640px)"
+		srcset="3.jpg"; style="width: 99%; display: block; margin: 0 auto">
+		<img src="1.jpg"; style="width: 99%; display: block; margin: 0 auto">
+	</picture>
+
+
 </body>
 </html>
